# cyclopentene-oh-addition-project

./: .gitignore  README.md  pes.ipynb  pyproject.toml
calc/C3e1/: opt.densities  opt.densitiesinfo  opt.engrad  opt.gbw  opt.inp  opt.opt  opt.property.txt  opt.xyz  opt_trj.xyz
calc/C3e1+OH/: guess.xyz  opt.densities  opt.densitiesinfo  opt.engrad  opt.gbw  opt.inp  opt.opt  opt.property.txt  opt.xyz  opt_trj.xyz  vis.ipynb
calc/C3e1+OH__C3y1o2/: opt.inp  opt.log.v006.xyz  path_back.inp  path_back.xyz  path_forw.inp  path_forw.xyz  path_forw_trj.xyz  vis.ipynb
calc/C3e1+OH__C3y2o1/: guess.xyz  opt.xyz  opt_trj.xyz
calc/C3e1/RH/: guess.xyz  opt.xyz  vis.ipynb
calc/C3e1/RH+OH-c1/: opt.xyz  opt_trj.xyz  vis.ipynb
calc/C3e1/RH+OH-c1_RHOH_saddle/: guess.xyz  path_back_trj.xyz  path_init_back.xyz  path_init_forw.xyz  vis.ipynb
calc/C3e1/RH+OH_RHOH_saddle/: opt_trj.xyz  path_forw.xyz  path_init.ipynb  path_vis.ipynb
calc/OH/: job.sh  opt.densities  opt.densitiesinfo  opt.gbw  opt.inp  opt.property.txt  opt.xyz  opt_trj.xyz
calc/cyC5e1/: opt.inp  opt.xyz  opt_trj.xyz
calc/cyC5e1+OH/: guess.xyz  opt-b3lyp.xyz  opt_trj.xyz  vis.ipynb
calc/cyC5e1+OH__cyC5y1o2/: cyC5.xyz  guess.ipynb  irc.inp  opt.log.v006.xyz  opt_trj.xyz  vis.ipynb
calc/cyC5e1+OH_cyC5y1o2/: C3+OH_ts.xyz  neb.inp
calc/cyC5e1/RH/: opt_trj.xyz
calc/cyC5e1/RH+OH-c1/: C3e1+OH.xyz
calc/cyC5e1/RH+OH-c1_RH+OH-c2_saddle/: check.ipynb  neb.inp
calc/cyC5e1/RH+OH-c2_RHOH_saddle/: C3+OH_ts.xyz  guess.ipynb  path_vis.ipynb  vis.ipynb
calc/cyC5e1/RH+OH_RHOH_saddle/: path_back.inp  path_back.xyz  path_back_trj.xyz  path_forw.inp  path_forw.xyz  path_forw_trj.xyz
calc/cyC5e1/RH+OH_complex/: guess.ipynb  opt_trj.xyz  scan.inp
calc/cyC5e1/RHOH/: guess.ipynb
calc/cyC5y1o2/: guess.xyz  opt.inp  opt_trj.xyz  vis.ipynb
oh/: opt.engrad  opt.inp  opt.opt  opt.out
scripts/: extract.sh  vis.sh
src/_autochem/: .gitrepo
