[project]
authors = [{name = "avcopan", email = "avcopan@gmail.com"}]
dependencies = []
name = "cyclopentene-oh-addition-project"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
test = ["pytest", "pytest-xdist[psutil]"]
lint = ["ruff", "mypy", "pre-commit"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cyclopentene_oh_addition_project = { path = ".", editable = true }
autochem = { path = "src/_autochem", editable = true }

[tool.pixi.tasks]
extract = "./scripts/extract.sh"
vis = "./scripts/vis.sh"

[tool.pixi.dependencies]
python = "3.11.*"
# AutoChem dependencies
numpy = "1.26.*"
scipy = "1.12.*"
networkx = "3.3.*"
xarray = "2023.8.*"
ipython = "8.15.*"
altair-all = "*"
pint = "*"
ipywidgets = "*"
jupyter = "*"
more-itertools = "*"
py3dmol = "*"
pyparsing = "*"
pyyaml = "*"
qcelemental = "*"
rdkit = "*"

[tool.pixi.feature.dev.dependencies]
gh = "*"

[tool.pixi.environments]
test = ["test"]
dev = ["test", "lint", "dev"]

# Ruff configurations
[tool.ruff]
target-version = "py311"
extend-select = [
    "E",      # style errors
    "F",      # flakes
    "D",      # pydocstyle
    "I001",   # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "A001",   # flake8-builtins
    "RUF",    # ruff-specific rules
    "RUF100", # Unused noqa directive
]
extend-ignore = [
    "RUF022", # Require __all__ to be sorted
]
